# PharmaWatch-AI

./: README.md  app.py  config.py  pyproject.toml
agents/: alternatives_agent.py
chains/: alternatives_chain.py  event_chain.py  research_chain.py
llm/: llm.py
models/: alternatives_schema.py
prompts/: alternatives_prompt.py  event_prompt.py
services/: alternatives_service.py  news_service.py
utils/: concurrency.py
